Display Mode > New Window is crashing #66256

Closed
opened 2019-06-29 18:14:24 +02:00 by chaos · 16 comments
Member

System Information
Operating system: Linux-4.15.0-52-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 14:01, hash: f566212aa2

Description of issue
I've been experiencing this problem from months now. What really draws my attention is that it continues to happen in recent builds, as it seems like such a basic and common feature.

  • From the Render Menu, set the Display Mode to New Window
  • Start a Render with F12

Result:
_ The current layout in use is completely broken, staying in the Image Editor with a blank canvas showing the grid. The actual image is rendered and stored in the 'Render Result' slot, but is not set as the current image in use.
_ The new window is actually created, but totally blank, with no user interface and no rendered image.
_ Even worse, if you launch the render manually from the User Interface, it makes Blender to crash. Instead of pressing F12, just go to Render > Render Image: It crashes.

Before Blender crashes with a segmentation fault, this error occurs:

internal error: modal gizmo-map handler has invalid area

And when Blender closes it generates the log:

Blender 2.80 (sub 74), Commit date: 2019-06-29 14:01, Hash f566212aa2
bpy.context.scene.render.display_mode = 'WINDOW' # Property
backtrace
./blender-2.80
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(BLI_system_backtrace+0x1d) [0x135ebed]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x1147e79]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7efc055a8f20]
/lib/x86_64-linux-gnu/libc.so.6(+0xb1646) [0x7efc0561b646]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyUnicode_FromFormatV+0x5ba) [0x17db96a]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyErr_FormatV+0x1d) [0x180a9cd]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyErr_Format+0x87) [0x1809ec7]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x13d3eb6]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x13d89a0]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyObject_SetAttr+0x4f) [0x17874df]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(_PyEval_EvalFrameDefault+0x4533) [0x113f713]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(_PyEval_EvalCodeWithName+0xae3) [0x17f8483]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(_PyFunction_FastCallDict+0xb7) [0x1743a57]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x13db2be]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x14e77e7]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(ED_region_header_layout+0x145) [0x2d3d935]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(wm_draw_update+0x34d) [0x150bc4d]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(WM_main+0x30) [0x1509530]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(main+0x2fe) [0x10b56be]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7efc0558bb97]
./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x114479c]

**System Information** Operating system: Linux-4.15.0-52-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 14:01, hash: `f566212aa2` **Description of issue** I've been experiencing this problem from months now. What really draws my attention is that it continues to happen in recent builds, as it seems like such a basic and common feature. - From the Render Menu, set the Display Mode to New Window - Start a Render with F12 Result: _ The current layout in use is completely broken, staying in the Image Editor with a blank canvas showing the grid. The actual image is rendered and stored in the 'Render Result' slot, but is not set as the current image in use. _ The new window is actually created, but totally blank, with no user interface and no rendered image. _ Even worse, if you launch the render manually from the User Interface, it makes Blender to crash. Instead of pressing F12, just go to Render > Render Image: It crashes. Before Blender crashes with a segmentation fault, this error occurs: >internal error: modal gizmo-map handler has invalid area And when Blender closes it generates the log: >Blender 2.80 (sub 74), Commit date: 2019-06-29 14:01, Hash f566212aa237 >bpy.context.scene.render.display_mode = 'WINDOW' # Property >backtrace >./blender-2.80 >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(BLI_system_backtrace+0x1d) [0x135ebed] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x1147e79] >/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7efc055a8f20] >/lib/x86_64-linux-gnu/libc.so.6(+0xb1646) [0x7efc0561b646] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyUnicode_FromFormatV+0x5ba) [0x17db96a] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyErr_FormatV+0x1d) [0x180a9cd] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyErr_Format+0x87) [0x1809ec7] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x13d3eb6] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x13d89a0] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(PyObject_SetAttr+0x4f) [0x17874df] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(_PyEval_EvalFrameDefault+0x4533) [0x113f713] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(_PyEval_EvalCodeWithName+0xae3) [0x17f8483] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(_PyFunction_FastCallDict+0xb7) [0x1743a57] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x13db2be] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x14e77e7] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(ED_region_header_layout+0x145) [0x2d3d935] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(wm_draw_update+0x34d) [0x150bc4d] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(WM_main+0x30) [0x1509530] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender(main+0x2fe) [0x10b56be] >/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7efc0558bb97] >./blender-2.80-f566212aa237-linux-glibc217-x86_64/blender() [0x114479c]
Author
Member

Added subscriber: @chaos-4

Added subscriber: @chaos-4

Added subscriber: @brecht

Added subscriber: @brecht

Does this happen with factory settings, or is there something specific in your preferences or you startup file affecting this?

Does this happen with factory settings, or is there something specific in your preferences or you startup file affecting this?
Author
Member

You're right. It seems that something was corrupt somehow. By returning all to factory settings it works normally.

You're right. It seems that something was corrupt somehow. By returning all to factory settings it works normally.
Author
Member

I investigated a bit further and discovered that this happens when the operator of RENDER_OT_render receives a copy of the current context as an override.
Like this:

bpy.ops.render.render(bpy.context.copy(), "INVOKE_DEFAULT")

Then, all above symptoms replicate. It only occurs when the display mode is in New Window. With all other display modes, passing the override to the operator works just fine.

I investigated a bit further and discovered that this happens when the operator of `RENDER_OT_render` receives a copy of the current context as an override. Like this: >bpy.ops.render.render(bpy.context.copy(), "INVOKE_DEFAULT") Then, all above symptoms replicate. It only occurs when the display mode is in New Window. With all other display modes, passing the override to the operator works just fine.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can confirm that the UI gets into a weird state when running:
bpy.ops.render.render(bpy.context.copy(), "INVOKE_DEFAULT")
I also get a crash if I close the empty render window that pops up:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555825d764 in ghost_event_proc (evt=0x7fffd04fef40, C_void_ptr=0x7fffeb891208)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_window.c:1395
1395	            BKE_icon_changed(screen->id.icon_id);
(gdb) bt
#0  0x000055555825d764 in ghost_event_proc (evt=0x7fffd04fef40, C_void_ptr=0x7fffeb891208)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_window.c:1395
#1  0x0000555559025304 in GHOST_CallbackEventConsumer::processEvent (this=0x7fffeb7ffec0, event=0x7fffd04fef40)
    at /home/zed/prog/blender/intern/ghost/intern/GHOST_CallbackEventConsumer.cpp:41
#2  0x000055555903ed43 in GHOST_EventManager::dispatchEvent (this=0x7fffeb86b6c0, event=0x7fffd04fef40)
    at /home/zed/prog/blender/intern/ghost/intern/GHOST_EventManager.cpp:85
- 3  0x000055555903edcc in GHOST_EventManager::dispatchEvent (this=0x7fffeb86b6c0) at /home/zed/prog/blender/intern/ghost/intern/GHOST_EventManager.cpp:95
- 4  0x000055555903ee0f in GHOST_EventManager::dispatchEvents (this=0x7fffeb86b6c0) at /home/zed/prog/blender/intern/ghost/intern/GHOST_EventManager.cpp:101
- 5  0x0000555559036246 in GHOST_System::dispatchEvents (this=0x7fffeb88b300) at /home/zed/prog/blender/intern/ghost/intern/GHOST_System.cpp:220
- 6  0x0000555559023ec3 in GHOST_DispatchEvents (systemhandle=0x7fffeb88b300) at /home/zed/prog/blender/intern/ghost/intern/GHOST_C-api.cpp:219
- 7  0x000055555825e00a in wm_window_process_events (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_window.c:1599
- 8  0x0000555558220c27 in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:414
#9  0x0000555557b7a8a9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500

@brecht who to assign this to?

I can confirm that the UI gets into a weird state when running: ```bpy.ops.render.render(bpy.context.copy(), "INVOKE_DEFAULT")``` I also get a crash if I close the empty render window that pops up: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555825d764 in ghost_event_proc (evt=0x7fffd04fef40, C_void_ptr=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_window.c:1395 1395 BKE_icon_changed(screen->id.icon_id); (gdb) bt #0 0x000055555825d764 in ghost_event_proc (evt=0x7fffd04fef40, C_void_ptr=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_window.c:1395 #1 0x0000555559025304 in GHOST_CallbackEventConsumer::processEvent (this=0x7fffeb7ffec0, event=0x7fffd04fef40) at /home/zed/prog/blender/intern/ghost/intern/GHOST_CallbackEventConsumer.cpp:41 #2 0x000055555903ed43 in GHOST_EventManager::dispatchEvent (this=0x7fffeb86b6c0, event=0x7fffd04fef40) at /home/zed/prog/blender/intern/ghost/intern/GHOST_EventManager.cpp:85 - 3 0x000055555903edcc in GHOST_EventManager::dispatchEvent (this=0x7fffeb86b6c0) at /home/zed/prog/blender/intern/ghost/intern/GHOST_EventManager.cpp:95 - 4 0x000055555903ee0f in GHOST_EventManager::dispatchEvents (this=0x7fffeb86b6c0) at /home/zed/prog/blender/intern/ghost/intern/GHOST_EventManager.cpp:101 - 5 0x0000555559036246 in GHOST_System::dispatchEvents (this=0x7fffeb88b300) at /home/zed/prog/blender/intern/ghost/intern/GHOST_System.cpp:220 - 6 0x0000555559023ec3 in GHOST_DispatchEvents (systemhandle=0x7fffeb88b300) at /home/zed/prog/blender/intern/ghost/intern/GHOST_C-api.cpp:219 - 7 0x000055555825e00a in wm_window_process_events (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_window.c:1599 - 8 0x0000555558220c27 in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:414 #9 0x0000555557b7a8a9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500 ``` @brecht who to assign this to?

No one, this is low priority.

No one, this is low priority.
Author
Member

Can we fix this now? Blender is more stable and the new versions of my addons still have to deal with this unsolved issue.

Can we fix this now? Blender is more stable and the new versions of my addons still have to deal with this unsolved issue.

Added subscriber: @capnm

Added subscriber: @capnm

I believe this seems to be related to this bug:
with an screencast add-on enabled, I get:

internal error: modal gizmo-map handler has invalid area
internal error: modal gizmo-map handler has invalid area
...

spam in the Linux console, it prints the line in a tight loop (~ 100% CPU load) until I stop the add-on.

See:
https://github.com/nutti/Screencast-Keys/issues/26
https://github.com/jayanam/shortcut_VUr/issues/24

I believe this seems to be related to this bug: with an screencast add-on enabled, I get: ``` internal error: modal gizmo-map handler has invalid area internal error: modal gizmo-map handler has invalid area ... ``` spam in the Linux console, it prints the line in a tight loop (~ 100% CPU load) until I stop the add-on. See: https://github.com/nutti/Screencast-Keys/issues/26 https://github.com/jayanam/shortcut_VUr/issues/24

Added subscriber: @elekmark

Added subscriber: @elekmark

Added subscriber: @Russ1642

Added subscriber: @Russ1642

This issue was referenced by 76f99bd13a

This issue was referenced by 76f99bd13ae1359d8256d5c34936a97d833b2c8c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-17 10:54:33 +02:00

I'm getting this in 4.1. To fix it I have to maximise and then minimise any of the editors.

I'm getting this in 4.1. To fix it I have to maximise and then minimise any of the editors.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66256
No description provided.